# eeg-lejepa

./: .gitignore  AUTODL.md  DECISIONS.md  INDOMAIN_PRETRAIN_PLAN.md  Makefile  PAPER_OUTLINE.md  README.md  SETUP.md  pyproject.toml
configs/: default.yaml  seizure_indomain.yaml
paper/: README.md  cover_letter.md  journal_shortlist.md  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  refs.bib
paper/sections/: abstract.tex  conclusion.tex  discussion.tex  experiments.tex  introduction.tex  method.tex  related.tex  results.tex
runs/: perfold_probe_clean.csv  probe_sweep_capacity.csv  probe_sweep_clean.csv  scaling_points.csv  significance_table.tex  significance_tests.csv  supervised_loso.csv  transfer_results.csv
scripts/: 01_download_data.py  01b_download_range.py  02_explore_data.py  03_model_forward.py  03b_profile_forward.py  04_train.py  05_linear_probe.py  06_probe_sweep.py  07_probe_bci_iv_2a.py  08_per_fold_figure.py  09_supervised_baseline.py  10_s2_jepa_sanity.py  11_perfold_dump.py  12_significance.py  13_scaling_figure.py  _plot_lambda_sweep.py  _plot_train.py  _preview_contaminated.py  overnight_session7.sh  run_clean_pipeline.sh  run_extra_experiments.sh
src/eeg_slm/: __init__.py
src/eeg_slm/data/: __init__.py  bci_iv_2a.py  dataset.py  loaders.py  preprocessing.py
src/eeg_slm/eval/: __init__.py  linear_probe.py  motor_imagery.py
src/eeg_slm/models/: __init__.py  classifier.py  encoder.py  jepa.py  sigreg.py  (+2 more)
tests/: test_bci_iv_2a.py  test_eval.py  test_loaders.py  test_models.py  test_sigreg.py  test_training.py
(+6 files in other folders)
